# groupedit

./: README.md  groupedit.cabal  run.sh  stack.yaml
src/: Main.hs
src/Groupedit/: Data.hs  WebSockets.hs
